- global manifest - web UI
